Geenbank Hub: improve additional info request UX
